prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/bool.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/bool.rs:6:22
  |
6 | fn test1(b: bool) -> bool {
  |                      ^^^^
  |
note: the error originates here
 --> $DIR/bool.rs:6:1
  |
6 | / fn test1(b: bool) -> bool {
7 | |     !b
8 | | }
  | |_^
note: counterexample for "b"
       value:   true
 --> $DIR/bool.rs:6:10
  |
6 | fn test1(b: bool) -> bool {
  |          ^
note: counterexample for "result"
       value:   false
 --> $DIR/bool.rs:7:5
  |
7 |     !b
  |     ^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/bool.rs:12:22
   |
12 | fn test2(b: bool) -> bool {
   |                      ^^^^
   |
note: the error originates here
  --> $DIR/bool.rs:12:1
   |
12 | / fn test2(b: bool) -> bool {
13 | |     !b
14 | | }
   | |_^
note: counterexample for "b"
       value:   true
  --> $DIR/bool.rs:12:10
   |
12 | fn test2(b: bool) -> bool {
   |          ^
note: counterexample for "result"
       value:   false
  --> $DIR/bool.rs:13:5
   |
13 |     !b
   |     ^^

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/bool.rs:17:5
   |
17 |     assert!(b);
   |     ^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/bool.rs:17:5
   |
17 |     assert!(b);
   |     ^^^^^^^^^^
note: counterexample for "b"
       value:   false
  --> $DIR/bool.rs:16:10
   |
16 | fn test3(b: bool) {
   |          ^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

